# steam-tradeoffer-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  READMEs.md
benches/: deserialize.rs  hashset_vs_vec.rs  trade_offer_mapping.rs
benches/fixtures/: offers.json
benches/fixtures/classinfos/: 440_101785959_11040578.json  440_2674_11040547.json  440_2674_4790024109.json  440_2674_4992002784.json  440_2674_5028898123.json  440_2674_5106992279.json  440_2675_11040547.json  440_5564_11040547.json
examples/: get_api_key.rs  get_inventory.rs  get_trade_history.rs  get_user_details.rs  inventories.rs  polling.rs  send_offer.rs
src/: api.rs  api_error.rs  api_helpers.rs  classinfo_cache.rs  confirmation_method.rs  currency.rs  deserializers.rs  eresult.rs  error.rs  functions.rs  helpers.rs  internal_types.rs  inventory.rs  item.rs  item_collection.rs  lib.rs  main.rs  offer_filter.rs  serialize.rs  serializers.rs  session.rs  static_functions.rs  time.rs  trade_offer_manager.rs  trade_offer_state.rs  trade_status.rs  types.rs
src/api/: api.rs  api_error.rs  api_helpers.rs  api_response.rs  builder.rs  helpers.rs  mod.rs  raw.rs  request.rs  response.rs  response_wrappers.rs
src/api/fixtures/: get_asset_classinfo.json  get_trade_offers.json  inventory.json  inventory_with_properties.json  new_offer.html  query_time.json
src/classinfo_cache/: classinfo_cache.rs  file_error.rs  helpers.rs  mod.rs  types.rs
src/enums/: confirmation_method.rs  confirmation_type.rs  eresult.rs  get_user_details_method.rs  language.rs  mod.rs  offer_filter.rs  trade_offer_state.rs  trade_status.rs
src/manager/: builder.rs  file.rs  helpers.rs  manager.rs  mod.rs  poll.rs  poll_data.rs
src/manager/polling/: file.rs  mod.rs  poll_action.rs  poll_data.rs  poll_type.rs  poller.rs
src/mobile_api/: builder.rs  confirmation.rs  helpers.rs  mobile_api.rs  mod.rs  operation.rs
src/request/: create_trade_offer.rs  inventory.rs  mod.rs  new_trade_offer.rs  serializers.rs  trade_history.rs
src/request/trade_offer/: builder.rs  item.rs  mod.rs  new_trade_offer.rs
src/response/: accepted_offer.rs  asset.rs  classinfo.rs  confirmation.rs  currency.rs  deserializers.rs  mod.rs  raw.rs  sent_offer.rs  trade.rs  trade_offer.rs  user_details.rs
src/response/fixtures/: classinfo_csgo.json  classinfo_item_expiration.json  classinfo_refined_metal.json  confirmation.json
tests/json/: query_time.json
