[package]
name = "steam-tradeoffer-manager"
version = "0.4.1"
edition = "2021"
description = "Makes Steam trade offers easy!"
authors = ["Julia"]
homepage = "https://github.com/juliarose/steam-tradeoffer-manager"
repository = "https://github.com/juliarose/steam-tradeoffer-manager"
license = "MIT"
keywords = ["steam", "trading", "tradeoffer"]
readme = "README.md"
exclude = ["/assets", ".*"]

[dependencies]
reqwest = { version = "^0.12", features = ["json", "cookies", "gzip", "http2", "native-tls-alpn"] }
reqwest-middleware = "^0.4"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = { version = "^1.0", features = ["raw_value"] }
serde_repr = "^0.1"
tokio = { version = "^1", features = ["rt"] }
async-fs = "^2.1"
async-std = "^1.13"
futures = "^0.3"
strum = { version = "^0.27", features = ["derive"] }
strum_macros = "^0.27"
chrono = { version = "^0.4.27", features = ["serde"] }
num_enum = "^0.7"
anyhow = "^1.0"
lazy-regex = "^3.4"
lazy_static = "^1.5"
url = "^2.2"
lfu_cache = "^1.3"
scraper = "^0.23"
thiserror = "^2"
log = "^0.4"
rand = "^0.9"
directories = "^6.0"
steamid-ng = "^1.0"
another-steam-totp = { version = "^0.4", features = ["reqwest"] }
bytes = "^1.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
criterion = "0.3"
owo-colors = "3.5.0"

[[bench]]
name = "trade_offer_mapping"
harness = false

[[bench]]
name = "deserialize"
harness = false

[[bench]]
name = "hashset_vs_vec"
harness = false
