[package]
name = "steam-tradeoffer-manager"
version = "0.5.0"
edition = "2021"
description = "Makes Steam trade offers easy!"
authors = ["Julia"]
homepage = "https://github.com/juliarose/steam-tradeoffer-manager"
repository = "https://github.com/juliarose/steam-tradeoffer-manager"
license = "MIT"
keywords = ["steam", "trading", "tradeoffer"]
readme = "README.md"
exclude = ["/assets", ".*"]

[dependencies]
another-steam-totp = { version = "^0.4", features = ["reqwest"] }
anyhow = "^1.0"
async-fs = "^2.1"
async-std = "^1.13"
bytes = "^1.10"
chrono = { version = "^0.4.27", features = ["serde"] }
directories = "^6.0"
futures = "^0.3"
lazy-regex = "^3.4"
lazy_static = "^1.5"
lfu_cache = "^1.3"
log = "^0.4"
num_enum = "^0.7"
rand = "^0.9"
reqwest = { version = "^0.12", features = ["json", "cookies", "gzip", "http2", "native-tls-alpn"] }
reqwest-middleware = "^0.4"
scraper = "^0.23"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = { version = "^1.0", features = ["raw_value"] }
serde_repr = "^0.1"
steamid-ng = "^1.0"
strum = { version = "^0.27", features = ["derive"] }
thiserror = "^2"
tokio = { version = "^1", features = ["rt"] }
url = "^2.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
criterion = "0.3"
owo-colors = "3.5.0"

[[bench]]
name = "trade_offer_mapping"
harness = false

[[bench]]
name = "deserialize"
harness = false
